<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".framework.logIn.ui.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/logo"
                android:layout_marginTop="60dp"
                />
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/iniciar_sesi_n"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:layout_marginTop="40dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tx_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo_electr_nico"
                android:layout_marginTop="20dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tx_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingresa_contrase_a"
                android:layout_marginTop="20dp"
                app:endIconMode="password_toggle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_entrar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/entrar"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_marginTop="40dp"
                style="@style/Widget.AppCompat.Button.Small"
                android:textSize="15sp"
                android:enabled="false"
                />

            <TextView
                android:id="@+id/tv_crearCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/crear_cuenta"
                android:textColor="@color/morado"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:fontFamily="sans-serif-black"
                />

            <TextView
                android:id="@+id/tv_recuperar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/rcuperar_contrase_a"
                android:textColor="@color/morado"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:fontFamily="sans-serif-black"
                />

            
        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/viewProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="0.5"
        android:visibility="gone"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:backgroundTint="@color/morado"

        />

</androidx.constraintlayout.widget.ConstraintLayout>